# polars-php

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: benchmarks.yml  build.yaml  docs.yaml  windows-build.yaml
compatibilty/: DataFrame.md  Expr.md
doc/: .gitignore  Expr.md  Makefile  README.md  closedinterval.md  conf.py  dataframe.md  datatype.md  exception.md  expr.md  index.md  lazyframe.md  lazygroupby.md  pyproject.toml  quantilemethod.md  series.md
php/: composer.json  polars.stubs.php
php/benchmarks/: compare-report.php  phpbench.json
php/benchmarks/Fixtures/: DataGenerator.php  TracksPolarsMemory.php
php/benchmarks/Polars/: AggregationBench.php  ColumnAccessBench.php  CsvReadBench.php  CsvWriteBench.php  DataFrameCreateBench.php  FilterBench.php  JoinBench.php  SortBench.php
php/benchmarks/PurePhp/: AggregationBench.php  ColumnAccessBench.php  CsvReadBench.php  CsvWriteBench.php  DataFrameCreateBench.php  FilterBench.php  JoinBench.php  SortBench.php
php/tests/: CsvTest.php  DataFrameExprIntegrationTest.php  DataFrameMethodsTest.php  EmptyDataFrameTest.php  ExprTest.php  IoTest.php  LazyFrameAggregationTest.php  LazyFrameTest.php  LazyGroupByTest.php  SeriesFlagsTest.php  SeriesTest.php  SimpleDataFrameTest.php
php/tests/fixtures/: no_header.csv  semicolon.csv  simple.csv  simple.json  simple.ndjson  with_nulls.csv
src/: common.rs  data_frame.rs  data_type.rs  exception.rs  expression.rs  functions.rs  lazy_frame.rs  lazy_group_by.rs  lib.rs  series.rs
