[package]
name = "polars-php"
version = "0.4.1"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
either = "1"
ext-php-rs = "0.15.6"
polars = { version = "0.52.0", features = ["lazy", "csv", "parquet", "json", "round_series", "product", "mode", "is_between", "timezones", "random", "pivot", "propagate_nans", "partition_by", "interpolate", "merge_sorted", "dtype-struct", "asof_join", "sql", "iejoin", "semi_anti_join"] }
polars-ops = { version = "0.52.0", features = ["mode", "to_dummies"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[package.metadata.php]
# Extension name as it will appear in PHP
extension_name = "polars"